<resources>

    <string name="app_name">Happy Meal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_new_user">Sign up</string>
    <string name="login_title">Happy Meal</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="ttile_menu">MENU</string>

    <string name="title_register">REGISTRATION</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_answer">Answer</string>
    <string name="prompt_question">Choose a question</string>
    <string name="button_signup">Create account</string>

    <string name="prompt_ship">Shipping Address</string>
    <string name="prompt_city">"City, State   Zip Code"</string>
    <string name="prompt_phonenumber">Phone Number</string>
    <string name="prompt_deliverynote">Delivery Notes (Optional)</string>
    <string name="placeorder">Place Order</string>
    <string name="shoppingcart">Shopping Cart</string>

    <string name="prompt_bill">Billing Address</string>
    <string name="prompt_Name">Name on Card</string>
    <string name="prompt_cardno">Card Number</string>
    <string name="prompt_expire">Expiration Date (Month/Year)</string>
    <string name="prompt_seccode">Security Code</string>

    <string name="confirm">"We will process your order recently.\n\nThank you!"</string>
    <string name="finish">Continue To Purchase</string>
</resources>
