<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.fiu.hmts_cu.activity.RegisterActivity"
    android:background="#fbfbfb"
    android:visibility="visible">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:singleLine="true"
        android:hint="@string/prompt_email"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwd"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:hint="@string/prompt_password"
        android:layout_below="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/phone"
        android:textSize="20sp"
        android:hint="@string/prompt_phone"
        android:layout_below="@+id/lastnm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:inputType="phone" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/lastnm"
        android:textSize="20sp"
        android:hint="@string/prompt_lastname"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/firstnm"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/answer"
        android:textSize="20sp"
        android:hint="@string/prompt_answer"
        android:layout_below="@+id/question"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/firstnm"
        android:textSize="20sp"
        android:hint="@string/prompt_firstname"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/passwd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signup"
        android:id="@+id/signup"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textColor="@color/colorLightGray"
        android:background="@color/colorOrange"
        android:height="40dp"
        android:gravity="center"
        android:layout_below="@+id/answer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:onClick="register"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:layout_below="@+id/phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:background="#ffd698"
        android:textAlignment="center"
        android:spinnerMode="dropdown"
        android:prompt="@string/prompt_question"
        android:dropDownWidth="wrap_content" />

</RelativeLayout>
